compiler-core/src/go/tests/snapshots/gleam_core__go__tests__strings__string_all_simple_escapes.snap
---
source: compiler-core/src/go/tests/strings.rs
assertion_line: 40
expression: "\npub fn go() -> String {\n  \"\\r\\t\\f\"\n}\n"
---
----- SOURCE CODE

pub fn go() -> String {
  "\r\t\f"
}


----- COMPILED GO
package thepackage

func Go() string {
  return "\r\t\f"
}
