compiler-core/src/go/tests/snapshots/gleam_core__go__tests__strings__string_concat.snap
---
source: compiler-core/src/go/tests/strings.rs
expression: "\npub fn go() -> String {\n  \"hello\" <> \" \" <> \"world\"\n}\n"
---
----- SOURCE CODE

pub fn go() -> String {
  "hello" <> " " <> "world"
}


----- COMPILED GO
package thepackage

func Go() string {
  return (("hello" + " ") + "world")
}
