compiler-core/src/go/tests/snapshots/gleam_core__go__tests__strings__string_literal.snap
---
source: compiler-core/src/go/tests/strings.rs
expression: "\npub fn go() -> String {\n  \"hello\"\n}\n"
---
----- SOURCE CODE

pub fn go() -> String {
  "hello"
}


----- COMPILED GO
package thepackage

func Go() string {
  return "hello"
}
