compiler-core/src/go/tests/snapshots/gleam_core__go__tests__strings__string_unicode_escape_short_hex_is_padded.snap
---
source: compiler-core/src/go/tests/strings.rs
assertion_line: 66
expression: "\npub fn go() -> String {\n  \"\\u{A}\"\n}\n"
---
----- SOURCE CODE

pub fn go() -> String {
  "\u{A}"
}


----- COMPILED GO
package thepackage

func Go() string {
  return "\u000A"
}
